src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__fixture-2.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.settings()
---
SettingsBuilder {
    experimental: None,
    missing_runtime_behavior: Some(
        Warn,
    ),
    always_keep_download: None,
    legacy_version_file: None,
    plugin_autoupdate_last_check_duration: None,
    trusted_config_paths: [],
    verbose: Some(
        true,
    ),
    asdf_compat: None,
    jobs: None,
    shorthands_file: None,
    disable_default_shorthands: None,
    log_level: None,
    raw: None,
    paranoid: None,
}
