src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__fixture-4.snap
---
source: src/config/config_file/rtx_toml.rs
expression: "replace_path(&format!(\"{:#?}\", cf.toolset))"
---
Toolset {
    versions: {
        "terraform": ToolVersionList {
            plugin_name: "terraform",
            versions: [],
            requests: [
                (
                    Version(
                        "terraform",
                        "1.0.0",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "~/fixtures/.rtx.toml",
            ),
        },
        "node": ToolVersionList {
            plugin_name: "node",
            versions: [],
            requests: [
                (
                    Version(
                        "node",
                        "18",
                    ),
                    {},
                ),
                (
                    Prefix(
                        "node",
                        "20",
                    ),
                    {},
                ),
                (
                    Ref(
                        "node",
                        "master",
                    ),
                    {},
                ),
                (
                    Path(
                        "node",
                        "~/.nodes/18",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "~/fixtures/.rtx.toml",
            ),
        },
        "jq": ToolVersionList {
            plugin_name: "jq",
            versions: [],
            requests: [
                (
                    Prefix(
                        "jq",
                        "1.6",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "~/fixtures/.rtx.toml",
            ),
        },
        "shellcheck": ToolVersionList {
            plugin_name: "shellcheck",
            versions: [],
            requests: [
                (
                    Version(
                        "shellcheck",
                        "0.9.0",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "~/fixtures/.rtx.toml",
            ),
        },
        "python": ToolVersionList {
            plugin_name: "python",
            versions: [],
            requests: [
                (
                    Version(
                        "python",
                        "3.10.0",
                    ),
                    {
                        "venv": ".venv",
                    },
                ),
                (
                    Version(
                        "python",
                        "3.9.0",
                    ),
                    {},
                ),
            ],
            source: RtxToml(
                "~/fixtures/.rtx.toml",
            ),
        },
    },
    source: Some(
        RtxToml(
            "~/fixtures/.rtx.toml",
        ),
    ),
    latest_versions: false,
}
