src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__fixture-5.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.alias
---
{
    "node": {
        "my_custom_node": "18",
    },
}
