src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__fixture-6.snap
---
source: src/config/config_file/rtx_toml.rs
expression: "replace_path(&format!(\"{:#?}\", &cf))"
---
RtxToml(~/fixtures/.rtx.toml): terraform@1.0.0, node@18 node@prefix:20 node@ref:master node@path:~/.nodes/18, jq@prefix:1.6, shellcheck@0.9.0, python@3.10.0 python@3.9.0 {
    settings: Object {
        "always_keep_download": Null,
        "always_keep_install": Null,
        "asdf_compat": Null,
        "cd": Null,
        "ci": Null,
        "color": Null,
        "debug": Null,
        "disable_default_shorthands": Null,
        "disable_tools": Array [
            String("disabled_tool"),
        ],
        "experimental": Null,
        "jobs": Null,
        "legacy_version_file": Null,
        "legacy_version_file_disable_tools": Array [
            String("disabled_tool_from_legacy_file"),
        ],
        "log_level": Null,
        "not_found_auto_install": Null,
        "plugin_autoupdate_last_check_duration": Null,
        "quiet": Null,
        "raw": Null,
        "shorthands_file": Null,
        "task_output": Null,
        "trace": Null,
        "trusted_config_paths": Null,
        "verbose": Bool(true),
        "yes": Null,
    },
    env: {
        "NODE_ENV": "production",
    },
    alias: {
        "node": {
            "my_custom_node": "18",
        },
    },
    plugins: {
        "node": "https://github.com/jdx/rtx-node",
    },
}
