src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__fixture.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.env()
---
{
    "NODE_ENV": "production",
}
