src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__path_dirs-3.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.dump()
---
env_path=["/foo", "./bar"]
[env]
foo="bar"

