src/config/config_file/snapshots/rtx__config__config_file__rtx_toml__tests__remove_alias.snap
---
source: src/config/config_file/rtx_toml.rs
expression: cf.alias
---
{
    "node": {
        "18": "18.0.0",
    },
}
